tests/trybuild/result/unexpected_token.stderr
error: no rules expected the token `+`
 --> tests/trybuild/result/unexpected_token.rs:8:20
  |
8 |     let result!(a, + b) = (A, (A, view::Null));
  |                    ^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$components:ident`
 --> src/query/result/mod.rs
  |
  |         ($component:ident $(,$components:ident)* $(,)?) => (
  |                              ^^^^^^^^^^^^^^^^^
